# replicant

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  postgres.yml
.sqlx/: query-4af51cae067b9558b0121ed77cfcbd57e62d1fa2ec950f66fa3be7099f0b1cc8.json  query-6608cfa6e92f6f0c432a18fd61fd6a9b9538fbe9e8a0048b9f8c4bc77e0d0d6a.json  query-886ff22af094663b1abb1df2efeba6adfc792081592cac487f272769a8fa813c.json  query-a62779a6114b55e8bc166d05a7818f8a4828b605adb578e593968ec6c082c080.json  query-fc8a25d324dcac7287635b91cc679aa90e8fefdce5c9a2c0779a5badaae8051e.json
db/: Dockerfile
init/: schema.sql
src/: crypto.rs  data.rs  db.rs  main.rs  request_data.rs  routes.rs  utils.rs
