[package]
name = "replicant"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
